# GG_MY_FRIEND

./: CMakeLists.txt  GG_MY_FRIEND.f90  README.md
src/unix/: AZCalculator.f90  CMakeLists.txt
src/unix/modules/: cl.f90  core.f90  inverse.f90  ui.f90
src/win/: AZCalculator.f90
src/win/modules/: CMakeLists.txt  cl.f90  core.f90  inverse.f90  ui.f90
